# nexya-backend

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  BACKEND_IA_NEXYA.md  CLAUDE.md  COURS_FASTAPI.md  COURS_NEXYA_AFFUTAGE_IA.md  COURS_NEXYA_BACKEND.md  Makefile  README.md  alembic.ini  pyproject.toml  test_gemini.py
.github/: branch-protection.md  dependabot.yml  release.yml
.github/workflows/: ci.yml  codeql.yml  dd-exports-fresh.yml  dependabot-auto-merge.yml  deploy.yml  evals.yml  load.yml  release.yml
app/: config.py  main.py
app/ai/: budget_tracker.py  cache.py  circuit_breaker.py  cost_tracker.py  experts.py  intent_classifier.py  models.py  moderation.py  moderation_rules.py  nexya_identity.py  nexya_preamble.py  nexya_routing.py  nexya_safety.py  nexya_temporal.py  nexya_tone.py  observability.py  retry.py  router.py  runtime.py  streaming.py  token_estimator.py
app/ai/embeddings/: __init__.py  base.py  gemini_embeddings.py  mock_embeddings.py  openai_embeddings.py  runtime.py
app/ai/engine/: __init__.py  query_engine.py  session_store.py
app/ai/expert_prompts/: __init__.py  _shared.py  computer.py  cooking.py  engineering.py  finance.py  general.py  language.py  legal.py  medicine.py  productivity.py  science.py  studio.py
app/ai/fcm/: __init__.py  base.py  firebase_fcm.py  mock_fcm.py  runtime.py
app/ai/providers/: __init__.py  anthropic_provider.py  base.py  gemini.py  mock.py  openai_provider.py  openrouter_provider.py  qwen_provider.py
app/ai/tools/: __init__.py  base.py  orchestrator.py  planner_tools.py
app/ai/vision/: __init__.py  base.py  gemini_vision.py  mock_vision.py  openai_vision.py  runtime.py
app/ai/voice/: __init__.py  base.py  mock_voice.py  openai_voice.py  runtime.py
app/api/: deps.py
app/api/v1/: router.py
app/core/auth/: guards.py  jwt.py  password_reset.py  refresh.py  unsubscribe_tokens.py
app/core/database/: base.py  postgres.py  redis.py
app/core/email/: __init__.py  base.py  brevo.py  factory.py  mock.py  renderer.py
app/core/errors/: exceptions.py  handlers.py
app/core/health/: __init__.py  extended.py  (+1 more)
app/integrations/: crisp_client.py  gemini_client.py  imagen_client.py
app/shared/: dependencies.py  schemas.py
app/static/: __init__.py
docker/: Caddyfile  Dockerfile  docker-compose.observability.yml  docker-compose.pgbouncer.yml  docker-compose.prod.yml  docker-compose.yml
docker/pgbouncer/: pgbouncer.ini  userlist.txt.example
docker/prometheus/: prometheus.yml
docs/: BACKEND_SESSIONS_PLAN.md  ROADMAP.md  glossary.md
docs/adr/: 0001-fastapi-vs-django.md  0002-sqlalchemy-async.md  0003-redis-rate-limiting.md  0004-jwt-rs256-vs-hs256.md  0005-llm-router-mock-first.md
docs/api/: endpoints.md  error-codes.md  openapi.json  versioning.md
docs/architecture/: ai-architecture.md  data-model.md  observability.md  overview.md  payments-readiness.md  request-flow.md  security-posture.md
docs/audit/: AUDIT_BACKEND_2026-05-01.md  PROMPT_AUDIT_BACKEND_NEXYA.md  PROMPT_REMEDIATION_BACKEND_NEXYA_2026-05-01.md  TODO_AUDIT_BACKEND_NEXYA.md  TODO_REMEDIATION_BACKEND_NEXYA_2026-05-01.md
docs/compliance/: ai-act.md  dpa-template.md  rgpd.md  security-checklist.md
docs/pricing/: PRICING_DECISIONS.md
docs/runbooks/: DEPLOYMENT.md  db-restore.md  deployment-l2.md  incident-response.md
migrations/: env.py
migrations/versions/: 001_create_auth_tables.py  002_create_chat_tables.py  003_auth_hardening.py  004_ai_calls_usage_daily.py  005_fts_search.py  006_projects.py  007_library.py  008_uploaded_files.py  009_memories.py  010_memory_extracted_sentinel.py  011_document_chunks.py  012_voice_transcriptions.py  013_vision_analyses.py  014_scheduled_tasks.py  015_notifications.py  016_expert_corpus_chunks.py  017_rgpd_consent_log_deletion_requests.py  018_message_feedback_user_suggestions.py  019_helpdesk_escalations.py  020_extend_schedule_type_check.py  021_add_updated_at_consent_log.py  022_add_updated_at_legacy_tables.py  023_extend_range_schedule_types.py  024_extend_yearly_range_schedule_type.py  025_messages_metadata_json.py  026_library_code_type.py
scripts/: backup_db.sh  deploy.sh  export_openapi.py  export_schema.sh  generate-secrets.sh  import_expert_corpus_cuisine.py  import_expert_corpus_langues.py  release.sh  restore_db.sh  rollback.sh  run_dev_api.py  run_dev_worker.py  seed_dev.py  server-setup.sh  smoke_test.sh
tests/: conftest.py  test_abuse_reports.py  test_ai_act_registry.py  test_ai_models_router.py  test_ai_models_service.py  test_alert_rules.py  test_auth_flow_integration.py  test_auth_hardening.py  test_auth_hardening_a3.py  test_auth_tasks_worker.py  test_b2_integration.py  test_backup_scripts.py  test_budget_tracker_embeddings.py  test_c2pa_provider_mock.py  test_chat_stream_expert_corpus_injection.py  test_chat_stream_flow_integration.py  test_chat_stream_memory_injection.py  test_chat_stream_persisted.py  test_chat_stream_pill_injection.py  test_chat_stream_tools_injection.py  test_chunk_worker.py  test_chunker.py  test_ci_yaml_structure.py  test_consent_service.py  test_conversations_crud.py  test_conversations_service.py  test_cost_tracker.py  test_cost_tracker_extended.py  test_crisp_client.py  test_dashboards_structure.py  test_data_export_service.py  test_dd_exports.py  test_deletion_service.py  test_dependabot_config.py  test_docker_compose_observability.py  test_email_template_suggestion.py  test_embeddings_mock.py  test_embeddings_mock_dim_configurable.py  test_embeddings_runtime.py  test_evals_baseline.py  (+123 more)
tests/eval_g1_langues/: questions.yaml  report_2026-04-24.md  run_eval.py
tests/eval_g2_cuisine/: COMPARISON_V7_vs_V8.md  __init__.py  questions.yaml  report_2026-05-18.md  report_2026-05-18_v8_chunked.md  run_eval.py
tests/evals/: README.md  __init__.py  __main__.py  baseline.py  candidate.py  cli.py  judge.py  report.py  runner.py
tests/load/: README.md  run.sh  thresholds.json
workers/: ai_tasks.py  auth_tasks.py  chat_tasks.py  chunk_tasks.py  memory_tasks.py  rgpd_tasks.py  scheduler_tasks.py  worker.py
(+203 files in other folders)
